--- a/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
+++ b/ConsoleApp1/ConsoleApp1/ConsoleApp1.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IListService.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="MyRepository.cs" />
